[metadata]
name = py2api
version = 0.0.5
url = https://github.com/thorwhalen/py2api
platforms = any
description_file = README.md
description = Declarative API entry point
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = py2api

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	flask_cors
	numpy
	urlparse
	flask_cors
	flask
	werkzeug
	platform
	requests

